--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,50 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>title2</title>
+	<title>1</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i&amp;subset=latin-ext" rel="stylesheet">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <div class="wrapper">
 	<header class="header"></header>
-	<main class="content"></main>
+	<main class="content">
+		<section class="container_why">
+			<div class="why_you_choose">
+				<h2 class="center">Why You Choose Foxtar Market Place?</h2>
+			 	<div class="row clearfix">
+                  <div class="col-4">
+                  	<div class="card center">
+                  		<div class="image_why">
+                  			<img src="images/please-enter-your-image-here.png" alt="please-enter-your-image-here">
+                  		</div>	
+                  		<h3>Easily Buy & Sell</h3>
+                  		<span>Dorem Ipsum is simply dummy text of the pring and typesetting industry. Lorem Ipsum has been the industry's standaum.</span>
+                  	</div>	
+                  </div>
+                   <div class="col-4">
+                  	<div class="card center">
+                  		<div class="image_why">
+                  			<img src="images/please-enter-your-image-here.png" alt="please-enter-your-image-here">
+                  		</div>	
+                  		<h3>Quality Products</h3>
+                  		<span>Dorem Ipsum is simply dummy text of the pring and typesetting industry. Lorem Ipsum has been the industry's standaum.</span>
+                  	</div>	
+                  </div>
+                   <div class="col-4">
+                  	<div class="card center">
+                  		<div class="image_why">
+                  			<img src="images/please-enter-your-image-here.png" alt="please-enter-your-image-here">
+                  		</div>	
+                  		<h3>100% Secure Payment</h3>
+                  		<span>Dorem Ipsum is simply dummy text of the pring and typesetting industry. Lorem Ipsum has been the industry's standaum.</span>
+                  	</div>	
+                  </div>
+             	</div>
+             </div>    
+		</section>
+	</main>
 	<footer class="footer"></footer>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
